<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalcJurden</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="billTotal">Bill Total</string>
    <string name="tip">Tip</string>
    <string name="zero">0.00</string>
    <string name="total">Total</string>
    <string name="custom">Custom</string>
    <string name="tip10">10%</string>
    <string name="tip15">15%</string>
    <string name="tip20">15%</string>

</resources>
